{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 102,
  "lineage": "e6f66f5a-0913-dd82-1fd2-bbbc078d2a0b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c13a4cc632854ab1",
            "association_id": "eipassoc-0e897bb2ff52b0543",
            "domain": "vpc",
            "id": "eipalloc-0c13a4cc632854ab1",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-02e4d08b35c6f8aee",
            "private_dns": "ip-10-1-0-253.ap-southeast-1.compute.internal",
            "private_ip": "10.1.0.253",
            "public_dns": "ec2-13-215-3-115.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.3.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "stage-eip"
            },
            "tags_all": {
              "Name": "stage-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:400485426720:internet-gateway/igw-099584e519e4d5cad",
            "id": "igw-099584e519e4d5cad",
            "owner_id": "400485426720",
            "tags": {
              "Name": "stage-igw"
            },
            "tags_all": {
              "Name": "stage-igw"
            },
            "vpc_id": "vpc-0e0eebbf83139d767"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "stage-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c13a4cc632854ab1",
            "connectivity_type": "public",
            "id": "nat-057f5c1c9730ec950",
            "network_interface_id": "eni-02e4d08b35c6f8aee",
            "private_ip": "10.1.0.253",
            "public_ip": "13.215.3.115",
            "subnet_id": "subnet-0c6ea82239db256be",
            "tags": {
              "Name": "stage-NAT-gw"
            },
            "tags_all": {
              "Name": "stage-NAT-gw"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:400485426720:route-table/rtb-06c7ec07b20908b10",
            "id": "rtb-06c7ec07b20908b10",
            "owner_id": "400485426720",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057f5c1c9730ec950",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stage-private-route"
            },
            "tags_all": {
              "Name": "stage-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0eebbf83139d767"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.stage-nat-gw",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:400485426720:route-table/rtb-07bdcd08584a8112a",
            "id": "rtb-07bdcd08584a8112a",
            "owner_id": "400485426720",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-099584e519e4d5cad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stage-public-route"
            },
            "tags_all": {
              "Name": "stage-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0eebbf83139d767"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b32961b642cce739",
            "route_table_id": "rtb-06c7ec07b20908b10",
            "subnet_id": "subnet-0df657a4cc826f28b"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.stage-nat-gw",
            "aws_route_table.privateroute",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c6ccac3b7a8452b",
            "route_table_id": "rtb-06c7ec07b20908b10",
            "subnet_id": "subnet-0f80cc1e709c36458"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.stage-nat-gw",
            "aws_route_table.privateroute",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d498a51a242eeed",
            "route_table_id": "rtb-06c7ec07b20908b10",
            "subnet_id": "subnet-0065543992b4d354e"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.stage-nat-gw",
            "aws_route_table.privateroute",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0793e84e428a14405",
            "route_table_id": "rtb-06c7ec07b20908b10",
            "subnet_id": "subnet-023a54ed2968bba99"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.stage-nat-gw",
            "aws_route_table.privateroute",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0680182ccc3de819e",
            "route_table_id": "rtb-06c7ec07b20908b10",
            "subnet_id": "subnet-0bd264cf89f293241"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.stage-nat-gw",
            "aws_route_table.privateroute",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09812cb830d2c5b56",
            "route_table_id": "rtb-06c7ec07b20908b10",
            "subnet_id": "subnet-0e5675f6e435a6652"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.stage-nat-gw",
            "aws_route_table.privateroute",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d603fb03d12c3c0",
            "route_table_id": "rtb-07bdcd08584a8112a",
            "subnet_id": "subnet-0c6ea82239db256be"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.publicroute",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05db7ada9ff92ccf0",
            "route_table_id": "rtb-07bdcd08584a8112a",
            "subnet_id": "subnet-09a7d8eb02fe10edd"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.publicroute",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04495cdece6533829",
            "route_table_id": "rtb-07bdcd08584a8112a",
            "subnet_id": "subnet-0824057bd7682e27e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.publicroute",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:400485426720:subnet/subnet-0df657a4cc826f28b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df657a4cc826f28b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400485426720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-data-1-subnet"
            },
            "tags_all": {
              "Name": "stage-data-1-subnet"
            },
            "vpc_id": "vpc-0e0eebbf83139d767"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:400485426720:subnet/subnet-0f80cc1e709c36458",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f80cc1e709c36458",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400485426720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-data-2-subnet"
            },
            "tags_all": {
              "Name": "stage-data-2-subnet"
            },
            "vpc_id": "vpc-0e0eebbf83139d767"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:400485426720:subnet/subnet-0065543992b4d354e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0065543992b4d354e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400485426720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-data-3-subnet"
            },
            "tags_all": {
              "Name": "stage-data-3-subnet"
            },
            "vpc_id": "vpc-0e0eebbf83139d767"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:400485426720:subnet/subnet-023a54ed2968bba99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023a54ed2968bba99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400485426720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-private-1-subnet"
            },
            "tags_all": {
              "Name": "stage-private-1-subnet"
            },
            "vpc_id": "vpc-0e0eebbf83139d767"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:400485426720:subnet/subnet-0bd264cf89f293241",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd264cf89f293241",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400485426720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-private-2-subnet"
            },
            "tags_all": {
              "Name": "stage-private-2-subnet"
            },
            "vpc_id": "vpc-0e0eebbf83139d767"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:400485426720:subnet/subnet-0e5675f6e435a6652",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5675f6e435a6652",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400485426720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-private-3-subnet"
            },
            "tags_all": {
              "Name": "stage-private-3-subnet"
            },
            "vpc_id": "vpc-0e0eebbf83139d767"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:400485426720:subnet/subnet-0c6ea82239db256be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6ea82239db256be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "400485426720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-public-1-subnet"
            },
            "tags_all": {
              "Name": "stage-public-1-subnet"
            },
            "vpc_id": "vpc-0e0eebbf83139d767"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:400485426720:subnet/subnet-09a7d8eb02fe10edd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a7d8eb02fe10edd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "400485426720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-public-2-subnet"
            },
            "tags_all": {
              "Name": "stage-public-2-subnet"
            },
            "vpc_id": "vpc-0e0eebbf83139d767"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:400485426720:subnet/subnet-0824057bd7682e27e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0824057bd7682e27e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "400485426720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-public-3-subnet"
            },
            "tags_all": {
              "Name": "stage-public-3-subnet"
            },
            "vpc_id": "vpc-0e0eebbf83139d767"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.avai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:400485426720:vpc/vpc-0e0eebbf83139d767",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a8519833b0a85070",
            "default_route_table_id": "rtb-009a287e88a6a23fd",
            "default_security_group_id": "sg-08cb9e89dc8c4a363",
            "dhcp_options_id": "dopt-00eb04903f848462f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e0eebbf83139d767",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-009a287e88a6a23fd",
            "owner_id": "400485426720",
            "tags": {
              "Name": "stage-vpc"
            },
            "tags_all": {
              "Name": "stage-vpc"
            }
          }
        }
      ]
    }
  ]
}